namespace/monitoring/grafana/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-https
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.oglesby.io`)
      kind: Rule
      services:
        - name: grafana
          port: 80
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-http
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.oglesby.io`)
      kind: Rule
      middlewares:
      - name: redirect-https
        namespace: traefik
      services:
        - name: grafana
          port: 80
